--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "editor.wordWrap": "on",
+  "diffEditor.wordWrap": "on",
+  "html.format.wrapAttributes": "auto",
+  "visualforce.format.wrapAttributes": "auto",
+  "editor.accessibilitySupport": "auto"
 }
